--- a/package.json
+++ b/package.json
@@ -13,8 +13,15 @@
   "dependencies": {
     "@types/react": "^16.0.27",
     "@types/react-dom": "^16.0.3",
+    "@types/react-router-dom": "^4.2.3",
+    "co-busboy": "^1.4.0",
     "html-webpack-plugin": "^2.30.1",
     "koa": "^2.4.1",
+    "koa-bodyparser": "^4.2.0",
+    "koa-cors": "^0.0.16",
+    "koa-frouter": "^0.5.0",
+    "koa-router": "^7.3.0",
+    "koa-static": "^4.0.2",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
